----------
v6.2.0-git
----------

[mms] Move determination whether to scan plaintext messages for PGP data from
      preferences to MIME viewer configuration.
[mms] Add copy email option to the address context menu in dynamic view.
[mms] Better reporting of e-mail address errors when composing.
[mms] Add list information display to dynamic view.
[jan] Add signatures back to compose view.
[mms] Add keyboard shortcuts to allow a more granular scroll of the dynamic
      preview pane (Request #12750).
[mms] Add country flag graphic to contact image information in dynamic view.
[mms] Address autocompleter on dynamic and basic page now uses a fancy UI.
[mms] Add ability to specify maximum total attachment size in composed message
      before all attachments are converted to links.
[mms] Cache generation of print-specific CSS.
[mms] Add support for showing a contact image in the contacts popup box in
      dynamic view.
[mms] Add ability to create a new filter rule from context menus in the
      dynamic view.
[mms] More intelligent sizing of raw message parts opened in a popup window.
[mms] Load sent-mail mailbox list on demand in dynamic view.
[mms] Allow configurable access to remote accounts from within a session
      (Request #8077).
[jan] Display "Other Options" icon instead of "New Window" icon in collapsed
      preview headers.
[mms] More advanced auto-completion for smartmobile view.


----------
v6.1.6-git
----------

[mms] Fix regression in parsing permission values (Bug #12812).
[mms] Fix regression in showing non-available actions in dynamic mailbox view
      when ACL rules prevent them (Bug #12808).


------
v6.1.5
------

[mms] SECURITY: Fix XSS in message and search screens resulting from a
      user-defined flag label (João Machado <geral@jpaulo.eu>).
[mms] Support uploading multiple attachments at once in dynamic view.
[mms] Send linked attachment download notification message in language of the
      sending user (Bug #12783).