@@ -2,6 +2,7 @@
 v6.2.0-git
 ----------
 
+[mms] Strip PGP armor text when replying to a message.
 [mms] Move determination whether to scan plaintext messages for PGP data from
       preferences to MIME viewer configuration.
 [mms] Add copy email option to the address context menu in dynamic view.
